all issue clear

--- a/demo/codonist-red-theme/assetss/scss/1-abstracts/_variables.scss
+++ b/demo/codonist-red-theme/assetss/scss/1-abstracts/_variables.scss
@@ -9,13 +9,15 @@ $font-size-5: 20px;
 $font-size-6: 20px;
 $font-size-7: 15px;
 //------------------------------- Colors
-$quail-valley: #ab9472;
-$dugong: #707070;
-$stretch-limo: #2b2e2e;
-$nefarious-blue: #c4cfd5;
-$stieglitz-silver: #8e8e8e;
-$winter-haven: #e1e7ea;
-$pinkest-white: #f9f7f5;
+$stretch-limo: #4b4b4b;
+$nefarious-blue: #9F9F9F;
+$quail-valley: #767676;
+$winter-haven: #f7f7f7;
+$white: #fff;
+$brands-color: #cc4277;
+$dugong: #343434;
+$stieglitz-silver: #282828;
+$progrees-bar-color: #141414;
 
 // Social
 $facebook: #3b5998;
@@ -25,7 +27,7 @@ $youtube: #cd201f;
 $grey-light: #fafafa;
 
 // Base
-$main-font-family: "P22 Mackinac Pro";
+$main-font-family: 'Montserrat', sans-serif;
 $secondary-font-family: "Roboto", sans-serif;
 $main-font-size: $font-size-6;
 
