--- a/demo/codonist-red-theme/assetss/scss/3-components/_owl-carousel.scss
+++ b/demo/codonist-red-theme/assetss/scss/3-components/_owl-carousel.scss
@@ -28,13 +28,13 @@
           }
           &:hover{
             span{
-                background-color:#cc4277;
+                background-color: $brands-color;
             }
           }
       }
       .active{
         span{
-            background-color:#cc4277;
+            background-color: $brands-color;
         }
       }
   }
