--- a/demo/codonist-red-theme/assetss/css/main.css
+++ b/demo/codonist-red-theme/assetss/css/main.css
@@ -82,21 +82,41 @@ p {
 .h1,
 h1 {
   font-size: 3.3em;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  line-height: 1.2;
+  margin: 0 0 0.3em;
 }
 
 .h2,
 h2 {
   font-size: 2.1em;
+  font-family: "Montserrat", sans-serif;
+  position: relative;
+  line-height: 1.4;
+  font-weight: 700;
+  color: #343434;
 }
 
 .h3,
 h3 {
   font-size: 1.15em;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.25;
+  font-weight: 700;
+  color: #343434;
+  margin-top: 1.6em;
+  margin-bottom: 0.8em;
 }
 
 .h4,
 h4 {
   font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.4;
+  font-weight: 700;
+  color: #343434;
+  margin: 0;
 }
 
 .p,
@@ -321,18 +341,12 @@ label.error {
 }
 
 .row-columns {
-  margin-top: -4em;
   width: 100%;
   flex-wrap: wrap;
 }
 
 .column {
-  margin-top: 4em;
-}
-
-.row-padding {
-  margin-left: -2em;
-  margin-right: -2em;
+  margin-top: 1em;
 }
 
 .col-padding {
@@ -341,15 +355,11 @@ label.error {
 }
 
 .section {
-  padding: 7em 0;
+  padding: 3em 0;
 }
 
 .section-sm {
-  padding: 4em 0;
-}
-
-.section-body {
-  margin-top: 6.5em;
+  padding: 2em 0;
 }
 
 .section-body-sm {
@@ -391,6 +401,10 @@ label.error {
 
 .mobile * {
   background-attachment: scroll !important;
+}
+
+#reviews {
+  margin-bottom: 2em;
 }
 
 /* 3.4 Magnific popup */
@@ -506,14 +520,14 @@ label.error {
   background-color: transparent;
 }
 .popup-modal-header .close i {
-  color: #ab9472;
+  color: #767676;
   font-size: 20px;
 }
 .popup-modal-header .close:hover {
-  background: #ab9472;
+  background: #767676;
 }
 .popup-modal-header .close:hover i {
-  color: white;
+  color: #fff;
 }
 .popup-modal-body {
   padding: 5px 35px 35px;
@@ -527,9 +541,6 @@ body.popup-active {
   overflow: hidden;
 }
 
-/*---------------------*\
-    Table Style
-\*---------------------*/
 /* 7.1 Owl carousel */
 .owl-controls {
   position: absolute;
@@ -636,7 +647,7 @@ body.popup-active {
 }
 .skills-bar .progress {
   overflow: visible;
-  height: 0.5em;
+  height: 0.3em;
   margin-bottom: 2.7em;
   border-radius: 0;
 }
@@ -933,7 +944,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1em;
   font-weight: 400;
   line-height: 1.62;
@@ -999,12 +1010,12 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  -webkit-animation: sk-bounce 2s infinite ease-in-out;
-  animation: sk-bounce 2s infinite ease-in-out;
+  -webkit-animation: sk-bounce 5s infinite ease-in-out;
+  animation: sk-bounce 5s infinite ease-in-out;
 }
 .loader .spinner .double-bounce2 {
-  -webkit-animation-delay: -1s;
-  animation-delay: -1s;
+  -webkit-animation-delay: -3s;
+  animation-delay: -3s;
 }
 
 @-webkit-keyframes sk-bounce {
@@ -1025,44 +1036,6 @@ body {
     -webkit-transform: scale(1);
   }
 }
-/* 1.3 Typography */
-h1,
-.h1 {
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
-  line-height: 1.2;
-  margin: 0 0 0.3em;
-}
-
-h2,
-.h2 {
-  font-family: "Montserrat", sans-serif;
-  position: relative;
-  line-height: 1.4;
-  font-weight: 700;
-  color: #343434;
-  margin-bottom: 0.5em;
-}
-
-h3,
-.h3 {
-  font-family: "Montserrat", sans-serif;
-  line-height: 1.25;
-  font-weight: 700;
-  color: #343434;
-  margin-top: 1.6em;
-  margin-bottom: 0.8em;
-}
-
-h4,
-.h4 {
-  font-family: "Montserrat", sans-serif;
-  line-height: 1.4;
-  font-weight: 700;
-  color: #343434;
-  margin: 0;
-}
-
 /* 2.1 Brand */
 .brand {
   display: inline-block;
@@ -1137,6 +1110,14 @@ h4,
 /* ------------------------------------------------------------------------------- */
 /*  11. Responsive styles
 /* ------------------------------------------------------------------------------- */
+.partner-1 {
+  margin-top: 40px;
+}
+
+.partner-2 {
+  margin-top: 7px;
+}
+
 /* 11.1 Min width 768px */
 @media (min-width: 768px) {
   html {
@@ -1199,7 +1180,8 @@ img.img-circle {
 }
 
 .our-skills .skills-bar img {
-  width: 65px;
+  width: 55px;
+  background: transparent;
 }
 
 .our-skills .section-skills-bar {
@@ -1208,7 +1190,6 @@ img.img-circle {
 }
 
 .our-skills .progress {
-  margin: 10px 0 0 0;
   width: 85%;
 }
 
@@ -1218,7 +1199,8 @@ img.img-circle {
 }
 
 .our-skills .progress-bar-title {
-  margin-bottom: 0;
+  margin-bottom: 7px;
+  font-size: 16px;
 }
 
 .our-skills h2 {
@@ -1230,7 +1212,7 @@ img.img-responsive.center-block {
 }
 
 img.img-responsive.center-block.center-block-02 {
-  width: 180px;
+  width: 110px;
   margin-top: 15px;
 }
 
