--- a/demo/codonist-red-theme/assetss/scss/2-base/_button.scss
+++ b/demo/codonist-red-theme/assetss/scss/2-base/_button.scss
@@ -6,19 +6,19 @@
 
 
 .btn{
-    font-family: 'Montserrat', sans-serif;
+    font-family: $main-font-family;
     font-weight: 400;
     font-size: 0.85em;
     letter-spacing: 0.1em;
     line-height: 1;
     position: relative;
     display: inline-block;
-    background:#cc4277;
-    border:2px solid #cc4277;
+    background: $brands-color;
+    border:2px solid $brands-color;
     padding:1.4em 3.5em 1.4em;
     border-radius: 0;
     text-decoration: none;
-    color:#fff;
+    color: $white;
     text-transform: uppercase;
     -webkit-transition: background-color .3s ease-out;
          -o-transition: background-color .3s ease-out;
@@ -28,7 +28,7 @@
   .btn .fa{
     font-size: 1.3em;
     margin-right: 5px;
-    color: #fff;
+    color: $white;
   }
   
   .btn:focus{
@@ -39,23 +39,23 @@
   
   .btn:hover,
   .btn:focus{
-    border-color:#cc4277;
+    border-color: $brands-color;
     background-color:transparent;
-    color: #cc4277;
+    color: $brands-color;
   }
   
   .btn-b-primary{
-    border-color:#cc4277;
-    color: #cc4277;
+    border-color: $brands-color;
+    color: $brands-color;
     background-color:transparent;
   }
   
   .btn-b-primary:hover{
-    background:#cc4277;
-    color: #fff;
+    background: $brands-color;
+    color: $white;
   }
   
   .btn-b-white{
-    border-color:#fff;
+    border-color:$white;
     background-color:transparent;
   }
