--- a/demo/codonist-red-theme/assetss/scss/4-layouts/_footer.scss
+++ b/demo/codonist-red-theme/assetss/scss/4-layouts/_footer.scss
@@ -5,7 +5,7 @@
 
 
 .footer{
-    font-family: 'Montserrat', sans-serif;
+    font-family: $main-font-family;
     font-size: 0.85em;
     padding:2em 0;
     .copy{
@@ -18,9 +18,9 @@
         display: inline-block;
         padding: 1px;
         margin:0 15px;
-        color: #fff;
+        color: $white;
         &:hover{
-            color: #cc4277;
+            color: $brands-color;
             text-decoration: none;
           }
       }
