--- a/demo/codonist-red-theme/assetss/scss/4-layouts/_header.scss
+++ b/demo/codonist-red-theme/assetss/scss/4-layouts/_header.scss
@@ -16,14 +16,14 @@
     margin:0;
     border:0;
     border-radius: 0;
-    background-color: #282828;
+    background-color: $stieglitz-silver;
     .navbar-header{
         margin-left: 0!important;
         .navbar-toggle{
             margin-top: 0;
             margin-bottom: 0;
             .icon-bar{
-                background-color: #cc4277;
+                background-color: $brands-color;
                 height: 2px;
                 width: 30px; 
                 + .icon-bar{
@@ -33,7 +33,7 @@
           }
           .collapsed{
             .icon-bar{
-                background-color: #fff;
+                background-color: $white;
               }
           }
       }
