--- a/demo/codonist-red-theme/assetss/scss/5-sections/_portfolio.scss
+++ b/demo/codonist-red-theme/assetss/scss/5-sections/_portfolio.scss
@@ -8,7 +8,7 @@
 
 
 .filter{
-    font-family: 'Montserrat', sans-serif;
+    font-family: $main-font-family;
     text-align: center;
     font-size:0.75em;
     letter-spacing: 0.2em;
@@ -18,20 +18,20 @@
         display: inline-block;
         text-transform: uppercase;
         a{
-            color:#4b4b4b;
+            color: $stretch-limo;
             padding:1em 1.4em;
             border:2px solid transparent;
             &:hover{
-                color:#cc4277;
+                color: $brands-color;
                 text-decoration: none;
               }
           }
       }
       .active{
         a{
-            color: #343434;
+            color: $dugong;
             text-decoration: none;
-            border:2px solid #343434;
+            border:2px solid $dugong;
           }
       }
   }
@@ -62,7 +62,7 @@
   
   .showcase-item{
     position: relative;
-    color: #fff;
+    color: $white;
   }
   
   .showcase-item-thumbnail{
@@ -82,8 +82,8 @@
     left: 0;
     right:0;
     opacity: 0;
-    color: #fff;
-    background-color:#cc4277;
+    color: $white;
+    background-color: $brands-color;
     -webkit-transition: all 0.3s ease-in;
     -o-transition: all 0.3s ease-in;
     transition: all 0.3s ease-in;
@@ -106,7 +106,7 @@
   }
   
   .showcase-item-category{
-    font-family:'Montserrat', sans-serif;
+    font-family:$main-font-family;
     font-weight: 700;
     text-transform: uppercase;
     font-size:1.7em;
