--- a/demo/codonist-red-theme/assetss/scss/6-pages/_home.scss
+++ b/demo/codonist-red-theme/assetss/scss/6-pages/_home.scss
@@ -109,7 +109,7 @@ body{
 
 
 
-.loader{
+.loaders{
   position: fixed;
   overflow: hidden;
   z-index: 100;
@@ -120,35 +120,23 @@ body{
   background: $white;
   color: $white;
   text-align: center;
-  .spinner {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 50px;
-    height: 50px;
-    -webkit-transform: translate(-50%, -50%);
-    -moz-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    -o-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    .double-bounce1, .double-bounce2 {
-        width: 100%;
-        height: 100%;
-        border-radius: 50%;
-        background-color: $brands-color;
-        opacity: 0.6;
-        position: absolute;
-        top: 0;
-        left: 0;
-        -webkit-animation: sk-bounce 5.0s infinite ease-in-out;
-        animation: sk-bounce 5.0s infinite ease-in-out;
-      }
-      .double-bounce2 {
-        -webkit-animation-delay: -3.0s;
-        animation-delay: -3.0s;
-      }
+  h2{
+    span{
+      color: #000;
+      position: fixed;
+      top: 50%;
+      left: 57%;
+      z-index: 200;
+      font-size: 50px;
+      font-family: $secondary-font-family;
+      font-weight: 900;
+      transform: translate(-100%,-100%);
+    }
   }
 }
+
+
+
 
 @-webkit-keyframes sk-bounce {
   0%, 100% { -webkit-transform: scale(0.0) }
