--- a/demo/animation/style.css
+++ b/demo/animation/style.css
@@ -1,63 +1,80 @@
 .dotCircle {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    margin: auto;
-    top: 120px;
-    left: 21px;
-    bottom: 0;
-    z-index: 20;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  margin: auto;
+  top: 120px;
+  left: 21px;
+  bottom: 0;
+  z-index: 20;
 }
 .dotCircle .itemDot {
-    display: block;
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    background: #000000;  
-    border-radius: 50%;
-    z-index: 3;
+  display: block;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  background: #000000;
+  border-radius: 50%;
+  z-index: 3;
 }
 .dotCircle .itemDot {
-    box-shadow: 10px -2px 20px #c0bebe;
+  box-shadow: 10px -2px 20px #c0bebe;
 }
-.dotCircle .itemDot:hover, .dotCircle .itemDot.active {
-    color:black;
-    transition: 0.5s;
-    background: -webkit-linear-gradient(left, #7d4ac7 0%, #a733bb 100%);
+.dotCircle .itemDot:hover,
+.dotCircle .itemDot.active {
+  color: black;
+  transition: 0.5s;
+  background: -webkit-linear-gradient(left, #7d4ac7 0%, #a733bb 100%);
 }
 
 .contentCircle {
-    position: relative;
-    top: 50px;
-    left: 50%;
-    transform: translate(-50%, -16%);
-    height: 300px;
-    width: 300px;
+  position: relative;
+  top: 50px;
+  left: 50%;
+  transform: translate(-50%, -16%);
+  height: 300px;
+  width: 300px;
 }
-.contentCircle h4{
-    margin-top: 85px;
+.contentCircle h4 {
+  margin-top: 85px;
 }
 .contentCircle .CirItem {
-    position: absolute;
-    text-align: center;
-    bottom: 0;
-    transform: scale(0);
-    transition: 0.5s;
-    width: 100%;
-    height: 100%;
-    top: 80px;
-    margin: auto;
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  transform: scale(0);
+  transition: 0.5s;
+  width: 100%;
+  height: 100%;
+  top: 80px;
+  margin: auto;
 }
 .CirItem.active {
-    z-index: 1;
-    opacity: 1;
-    transform: scale(1);
-    transition: 0.5s;
+  z-index: 1;
+  opacity: 1;
+  transform: scale(1);
+  transition: 0.5s;
 }
-.contentCircle .CirItem img{
-    width: 340px;
-    height: 340px;
-    border-radius: 50%;
-    border: 2px solid black;
-    padding: 30px;
+.contentCircle .CirItem img {
+  width: 340px;
+  height: 340px;
+  border-radius: 50%;
+  border: 2px solid black;
+  padding: 30px;
+}
+
+/* ------------------ */
+
+.circle-images {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.circle-images img {
+  display: none;
+  width: 100%;
+}
+.circle-images img.active {
+  display: block;
 }
