--- a/demo/codonist-red-theme/assetss/scss/4-layouts/_header.scss
+++ b/demo/codonist-red-theme/assetss/scss/4-layouts/_header.scss
@@ -40,6 +40,11 @@
       .navbar-collapse{
         border-top: 0;
         box-shadow: none;
+        ul{
+          li{
+            font-size: 17px;
+          }
+        }
       }
   }
 
