--- a/demo/boda-ui/assets/scss/2-base/_base.scss
+++ b/demo/boda-ui/assets/scss/2-base/_base.scss
@@ -7,6 +7,7 @@ body {
   background-color: #ffffff !important;
   position: relative;
   padding-bottom: 94px;
+  min-height: 100vh;
 }
 .container{
   max-width: 285px;
